# langflow

./: .gitignore  Dockerfile  current_flow.json  docker-compose-keycloak.yml  docker-compose.yml  docker.env  pyproject.toml  search_agent_flow.json  test.py
chainlit/: README.md  chainlit.md  init_db.py  pyproject.toml  setup_keycloak.py
chainlit/.chainlit/: config.toml
chainlit/.chainlit/translations/: it.json
chainlit/src/chainlit_app/: .env  __init__.py  auth.py  config.py  data_layer.py  langflow.py  main.py  tools.py
chainlit/src/chainlit_app/.chainlit/: config.toml
chainlit/src/chainlit_app/public/: stylesheet.css  theme.json
components/: .gitkeep
langflow-config-dir/: .gitkeep
