[project]
name = "langflow-custom-app"
version = "1.0.0"
description = "Custom Langflow application with additional dependencies"
requires-python = ">=3.10"

dependencies = [
    # Add your custom dependencies here
    # Example:
    # "requests>=2.28.0",
    # "pandas>=2.0.0",
    # "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
