[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainlit-app"
version = "0.1.0"
description = "Chainlit frontend for Langflow with Keycloak SSO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.9.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
chainlit-app = "chainlit_app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/chainlit_app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
